Add autogenerated client code
Add autogenerated client code
