# api/handlers/get.go
@@ -6,22 +6,59 @@ import (
 )
 
 // swagger:route GET /products products listProducts
-// Returns a list of products from database
+// Return a list of products from the database
 // responses:
-//
 //	200: productsResponse
 
-// GetProducts returns the products from data sourse
-func (p *Products) GetProducts(rw http.ResponseWriter, r *http.Request) {
-	p.l.Println("Handle GET products")
+// ListAll handles GET requests and returns all current products
+func (p *Products) ListAll(rw http.ResponseWriter, r *http.Request) {
+	p.l.Println("[DEBUG] get all records")
 
-	// fetch the products from datastore
-	lp := data.GetProducts()
+	rw.Header().Add("Content-Type", "application/json")
+	prods := data.GetProducts()
 
-	// serialize the list of poducts to JSON
-	err := lp.ToJSON(rw)
-
+	err := data.ToJSON(prods, rw)
 	if err != nil {
-		http.Error(rw, "Unable to encode JSON", http.StatusInternalServerError)
+		// we should never be here but log the error just incase
+		p.l.Println("[ERROR] serializing product", err)
+	}
+}
+
+// swagger:route GET /products/{id} products listSingleProduct
+// Return a list of products from the database
+// responses:
+//	200: productResponse
+//	404: errorResponse
+
+// ListSingle handles GET requests
+func (p *Products) ListSingle(rw http.ResponseWriter, r *http.Request) {
+	rw.Header().Add("Content-Type", "application/json")
+	id := getProductID(r)
+
+	p.l.Println("[DEBUG] get record id", id)
+
+	prod, err := data.GetProductById(id)
+
+	switch err {
+	case nil:
+
+	case data.ErrProductNotFound:
+		p.l.Println("[ERROR] fetching product", err)
+
+		rw.WriteHeader(http.StatusNotFound)
+		data.ToJSON(&GenericError{Message: err.Error()}, rw)
+		return
+	default:
+		p.l.Println("[ERROR] fetching product", err)
+
+		rw.WriteHeader(http.StatusInternalServerError)
+		data.ToJSON(&GenericError{Message: err.Error()}, rw)
+		return
+	}
+
+	err = data.ToJSON(prod, rw)
+	if err != nil {
+		// we should never be here but log the error just incase
+		p.l.Println("[ERROR] serializing product", err)
 	}
 }
