# api/handlers/update.go
@@ -2,50 +2,33 @@ package handlers
 
 import (
 	"github.com/evgeniy-dammer/building-microservices-with-go/api/data"
-	"github.com/gorilla/mux"
 	"net/http"
-	"strconv"
 )
 
-// swagger:route PUT /products/{id} products updateProduct
-// Updates product by id in database
-// responses:
+// swagger:route PUT /products products updateProduct
+// Update a products details
 //
-//	200: noContent
+// responses:
+//	201: noContentResponse
+//  404: errorResponse
+//  422: errorValidation
 
-// UpdateProduct updates product by id
-func (p *Products) UpdateProduct(rw http.ResponseWriter, r *http.Request) {
-	p.l.Println("Handle PUT product")
+// Update handles PUT requests to update products
+func (p *Products) Update(rw http.ResponseWriter, r *http.Request) {
+	rw.Header().Add("Content-Type", "application/json")
+	// fetch the product from the context
+	prod := r.Context().Value(KeyProduct{}).(data.Product)
+	p.l.Println("[DEBUG] updating record id", prod.ID)
 
-	// extract id from path
-	vars := mux.Vars(r)
-
-	// convert string id ti int
-	id, err := strconv.Atoi(vars["id"])
-
-	if err != nil {
-		http.Error(rw, "Unable to convert ID", http.StatusBadRequest)
-		return
-	}
-
-	// create new product object from request context
-	product := r.Context().Value(KeyProduct{}).(data.Product)
-
-	// updates an object to the datastore
-	err = data.UpdateProduct(id, &product)
-
-	// if product not founded
+	err := data.UpdateProduct(prod)
 	if err == data.ErrProductNotFound {
-		http.Error(rw, "Product not found", http.StatusNotFound)
+		p.l.Println("[ERROR] product not found", err)
+
+		rw.WriteHeader(http.StatusNotFound)
+		data.ToJSON(&GenericError{Message: "Product not found in database"}, rw)
 		return
 	}
 
-	// if another error
-	if err != nil {
-		http.Error(rw, "Unable to update product", http.StatusInternalServerError)
-		return
-	}
-
-	// if all is OK
-	rw.WriteHeader(http.StatusOK)
+	// write the no content success header
+	rw.WriteHeader(http.StatusNoContent)
 }
