# api/swagger.yaml
@@ -2,11 +2,20 @@ basePath: /
 consumes:
     - application/json
 definitions:
+    GenericError:
+        description: GenericError is a generic error message returned by a server
+        properties:
+            message:
+                type: string
+                x-go-name: Message
+        type: object
+        x-go-package: github.com/evgeniy-dammer/building-microservices-with-go/api/handlers
     Product:
         description: Product model
         properties:
             description:
                 description: The description for a product
+                maxLength: 10000
                 type: string
                 x-go-name: Description
             id:
@@ -17,16 +26,18 @@ definitions:
                 x-go-name: ID
             name:
                 description: The name for a product
+                maxLength: 255
                 type: string
                 x-go-name: Name
             price:
                 description: The price for a product
                 format: float
+                minimum: 0.01
                 type: number
                 x-go-name: Price
             sku:
                 description: The SKU for a product
-                example: SKU0001
+                pattern: '[a-z]+-[a-z]+-[a-z]+'
                 type: string
                 x-go-name: SKU
         required:
@@ -36,6 +47,16 @@ definitions:
             - sku
         type: object
         x-go-package: github.com/evgeniy-dammer/building-microservices-with-go/api/data
+    ValidationError:
+        description: ValidationError is a collection of validation error messages
+        properties:
+            messages:
+                items:
+                    type: string
+                type: array
+                x-go-name: Messages
+        type: object
+        x-go-package: github.com/evgeniy-dammer/building-microservices-with-go/api/handlers
 info:
     description: Documentation for Product API
     title: of Product API
@@ -43,7 +64,7 @@ info:
 paths:
     /products:
         get:
-            description: Returns a list of products from database
+            description: Return a list of products from the database
             operationId: listProducts
             responses:
                 "200":
@@ -51,11 +72,45 @@ paths:
             tags:
                 - products
         post:
-            description: Inserts a new product in database
-            operationId: addProduct
+            description: Create a new product
+            operationId: createProduct
+            parameters:
+                - description: |-
+                    Product data structure to Update or Create.
+                    Note: the id field is ignored by update and create operations
+                  in: body
+                  name: Body
+                  required: true
+                  schema:
+                    $ref: '#/definitions/Product'
+            responses:
+                "200":
+                    $ref: '#/responses/productResponse'
+                "422":
+                    $ref: '#/responses/errorValidation'
+                "501":
+                    $ref: '#/responses/errorResponse'
+            tags:
+                - products
+        put:
+            description: Update a products details
+            operationId: updateProduct
+            parameters:
+                - description: |-
+                    Product data structure to Update or Create.
+                    Note: the id field is ignored by update and create operations
+                  in: body
+                  name: Body
+                  required: true
+                  schema:
+                    $ref: '#/definitions/Product'
             responses:
                 "201":
-                    $ref: '#/responses/productsRequest'
+                    $ref: '#/responses/noContentResponse'
+                "404":
+                    $ref: '#/responses/errorResponse'
+                "422":
+                    $ref: '#/responses/errorValidation'
             tags:
                 - products
     /products/{id}:
@@ -63,7 +118,7 @@ paths:
             description: Removes product by id from the database
             operationId: deleteProduct
             parameters:
-                - description: The id of the product to update or delete from database
+                - description: The id of the product for which the operation relates
                   format: int64
                   in: path
                   name: id
@@ -72,14 +127,18 @@ paths:
                   x-go-name: ID
             responses:
                 "201":
-                    $ref: '#/responses/noContent'
+                    $ref: '#/responses/noContentResponse'
+                "404":
+                    $ref: '#/responses/errorResponse'
+                "501":
+                    $ref: '#/responses/errorResponse'
             tags:
                 - products
-        put:
-            description: Updates product by id in database
-            operationId: updateProduct
+        get:
+            description: Return a list of products from the database
+            operationId: listSingleProduct
             parameters:
-                - description: The id of the product to update or delete from database
+                - description: The id of the product for which the operation relates
                   format: int64
                   in: path
                   name: id
@@ -88,16 +147,30 @@ paths:
                   x-go-name: ID
             responses:
                 "200":
-                    $ref: '#/responses/noContent'
+                    $ref: '#/responses/productResponse'
+                "404":
+                    $ref: '#/responses/errorResponse'
             tags:
                 - products
 produces:
     - application/json
 responses:
-    noContent:
-        description: productsNoContentWrapper is a wrapper for no content returns in the response
+    errorResponse:
+        description: Generic error message returned as a string
+        schema:
+            $ref: '#/definitions/GenericError'
+    errorValidation:
+        description: Validation errors defined as an array of strings
+        schema:
+            $ref: '#/definitions/ValidationError'
+    noContentResponse:
+        description: No content is returned by this API endpoint
+    productResponse:
+        description: Data structure representing a single product
+        schema:
+            $ref: '#/definitions/Product'
     productsResponse:
-        description: productsResponseWrapper is a wrapper for a list of products returns in the response
+        description: A list of products
         schema:
             items:
                 $ref: '#/definitions/Product'
